--- a/Vibescape/views/index.ejs
+++ b/Vibescape/views/index.ejs
@@ -20,7 +20,7 @@
         <div class="menu">
             <a href="#"><img width="38px" src="images/icons8-home 1 (1).svg" alt=""> HOME</a>
             <a href="#"><img width="36px" src="images/musical-note-black-shape-svgrepo-com 1 (1).svg" alt=""> LIBRARY</a>
-            <a href="#"><img id="profile_logo"  src="images/profile-1336-svgrepo-com 1.svg" alt=""></a>
+            <a href="/login"><img id="profile_logo"  src="images/profile-1336-svgrepo-com 1.svg" alt=""></a>
         </div>
     </div>
     <div class="above-container">
@@ -49,11 +49,11 @@
     </div>
     <div class="emojis">
         <ul>
-            <li><a href="/setup/setup.html">😁</a></li>
-            <li><a href="/setup/setup.html">😔</a></li>
-            <li><a href="/setup/setup.html">⚡</a></li>
-            <li><a href="/setup/setup.html">❤️</a></li>
-            <li><a href="/setup/setup.html">😌</a></li>
+            <li><a href="/songs/setup-happy">😁</a></li>
+            <li><a href="/songs/setup-sad">😔</a></li>
+            <li><a href="/songs/setup-energy">⚡</a></li>
+            <li><a href="/songs/setup-love">❤️</a></li>
+            <li><a href="/songs/setup-melody">😌</a></li>
             
         </ul>
         <br><br>
