--- a/Vibescape/views/signup.ejs
+++ b/Vibescape/views/signup.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <form action="/index.html">
+    <form action="/login">
       <h1>Register</h1>
       <div class="input-box">
         <input type="text" placeholder="Username" required>
