--- a/Vibescape/public/setup.css
+++ b/Vibescape/public/setup.css
@@ -98,7 +98,30 @@ body {
     margin-bottom: 15px;
 }
 
-.podcast-grid {
+#songs{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr); /* 5 columns */
+    /* grid-template-rows: repeat(4, auto); 4 rows, height adjusts to content */
+    gap: 15px; /* Space between grid items */
+    justify-content: center;
+    padding: 20px;  
+}
+.songDiv {
+    background: #1D1D1D;
+    border:2px solid white;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+
+
+
+/* .podcast-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 20px;
@@ -120,4 +143,4 @@ body {
 .podcast-card p {
     margin-top: 8px;
     font-size: 14px;
-}
+} */
