--- a/Vibescape/views/login.ejs
+++ b/Vibescape/views/login.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="wrapper">
-    <form action="/index.html">
+    <form action="/index">
       <h1>Login</h1>
       <div class="input-box">
         <input type="text" placeholder="Username" required>
@@ -25,7 +25,7 @@
       </div>
       <button type="submit" class="btn">Login</button>
       <div class="register-link">
-        <p>Dont have an account? <a href="/signup/signup.html">Register</a></p>
+        <p>Dont have an account? <a href="/signup">Register</a></p>
       </div>
     </form>
   </div>
