--- a/Vibescape/views/signup.ejs
+++ b/Vibescape/views/signup.ejs
@@ -9,14 +9,14 @@
 </head>
 <body>
   <div class="wrapper">
-    <form action="/login">
+    <form action="/signup" method="post">
       <h1>Register</h1>
       <div class="input-box">
-        <input type="text" placeholder="Username" required>
+        <input type="text" placeholder="Username" name="username" required>
         <i class='bx bxs-user'></i>
       </div>
       <div class="input-box">
-        <input type="password" placeholder="Password" required>
+        <input type="password" placeholder="Password" name="password" required>
         <i class='bx bxs-lock-alt' ></i>
       </div>
       <br>
